<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="381dp"
        android:layout_height="77dp"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:text="00"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button16"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn16"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="92dp"
        android:text="@string/btn2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn3"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn4"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn5"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button6"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:text="@string/btn7"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn8"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button10"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn10"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn9"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button11"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:text="@string/btn11"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button12"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn12"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button14"
        android:layout_width="75dp"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn14"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button13"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn13"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button15"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:text="@string/btn15"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="92dp"
        android:text="@string/btn1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>